--- a/spingboot-oracle-crud-user.properties
+++ b/spingboot-oracle-crud-user.properties
@@ -1,5 +1,8 @@
-# Oracle DB connection
 spring.datasource.url=jdbc:oracle:thin:@10.4.12.78:6517:coxxod12c
 spring.datasource.username=TRG_OWNR
 spring.datasource.password=test#123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+ 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
